k8s/influxdb-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml
    kompose.version: 1.16.0 (0c01309)
  labels:
    io.kompose.service: influxdb
  name: influxdb
  namespace: tick
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: influxdb
    spec:
      containers:
      - image: influxdb:1.5
        name: influxdb
        ports:
        - containerPort: 8086
        resources: {}
        volumeMounts:
        - name: tick-claim
          mountPath: /var/lib/influxdb
          subPath: var/lib/influxdb
          readOnly: false
        - name: tick-claim
          mountPath: /etc/ssl/influxdb
          subPath: etc/ssl/influxdb
          readOnly: true
        - name: tick-claim
          mountPath: /etc/influxdb
          subPath: etc/influxdb
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: tick-claim
        persistentVolumeClaim:
          claimName: gluster-claim
