k8s/kapacitor-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml
    kompose.version: 1.16.0 (0c01309)
  labels:
    io.kompose.service: kapacitor
  name: kapacitor
  namespace: tick
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: kapacitor
    spec:
      containers:
      - args:
        - kapacitord
        - -config
        - /etc/kapacitor/kapacitor.conf
        image: kapacitor:1.5
        name: kapacitor
        ports:
        - containerPort: 9092
        resources: {}
        volumeMounts:
        - name: tick-claim
          mountPath: /etc/ssl/influxdb
          subPath: etc/ssl/influxdb
          readOnly: true
        - name: tick-claim
          mountPath: /etc/kapacitor
          subPath: etc/kapacitor
          readOnly: true
        - name: tick-claim
          mountPath: /logs
          subPath: logs
          readOnly: false
        - name: tick-claim
          mountPath: /var/lib/kapacitor
          subPath: var/lib/kapacitor
          readOnly: false
      restartPolicy: Always
      volumes:
      - name: tick-claim
        persistentVolumeClaim:
          claimName: gluster-claim
