k8s/chronograf-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml
    kompose.version: 1.16.0 (0c01309)
  labels:
    io.kompose.service: chronograf
  name: chronograf
  namespace: tick
spec:
  type: ClusterIP
  ports:
  - name: "chronograf"
    port: 8888
  selector:
    io.kompose.service: chronograf
