k8s/gluster-ep.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-ep
  namespace: tick
spec:
  ports:
    - port: 1
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-ep
  namespace: tick
subsets:
  - addresses:
      - ip: GLUSTER_EP_IP
    ports:
      - port: 1
