k8s/influxdb-svc-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml
    kompose.version: 1.16.0 (0c01309)
  labels:
    io.kompose.service: influxdb
  name: influxdb
  namespace: tick
spec:
  type: ClusterIP
  ports:
  - name: "influxdb"
    port: 8086
  selector:
    io.kompose.service: influxdb
