k8s/kapacitor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: kapacitor
  name: kapacitor
  namespace: tick
spec:
  type: ClusterIP
  ports:
  - name: "kapacitor"
    port: 9092
    targetPort: 9092
  selector:
    io.kompose.service: kapacitor
